fixed z-index layering bugs

--- a/src/screens/ProfileScreen.css
+++ b/src/screens/ProfileScreen.css
@@ -19,6 +19,7 @@
     width: 600px;
     height: 600px;
     padding: 10px;
+    z-index: 9999;
 }
 
 .profilescreen-box h1 {
@@ -170,7 +171,8 @@
     flex-direction: column;
     align-items: flex-end;
     padding-top: 20px;
-    padding-right: 200px;
+    padding-right: 200px;  
+    z-index: 1;
 }
 
 .welcome-user{
@@ -241,6 +243,7 @@
         padding-bottom: 80px;
         padding-top: 0px;
         padding-right: 0px;
+        z-index: -1;
     }
     
     .welcome-user{
